# CryptoTxNotifyBot

./: .dockerignore  .gitignore  Dockerfile.alembic  Dockerfile.base  Dockerfile.bot  Dockerfile.fastapi  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini  test.py
dockerfiles/: Dockerfile.base  Dockerfile.bot  Dockerfile.fastapi
src/: bot.py  main.py  test.py  webhook_setter.py
src/bot/handlers/: callbacks.py  menues.py  messages.py  updates.py
src/bot/resources/: callbacks_factory.py  filters.py  keyboards.py  states.py  text_answers.py
src/bot/utils/: msg_sender.py
src/core/: config.py  enums.py  exceptions.py  networks.py
src/db/: __init__.py  connector.py
src/db/core/: base_model.py  base_repository.py  unit_of_work.py
src/db/migrations/: env.py
src/db/models/: __init__.py  group_wallets.py  groups.py  users.py  wallets.py
src/db/repositories/: groups.py  users.py  wallets.py
src/integrations/: base.py  models.py
src/integrations/transactions/: alerts.py  destinations.py
src/integrations/wallets/: validator.py
src/schemas/: groups.py  transactions.py  users.py  wallets.py  webhooks.py
src/services/: balance_service.py  destination_service.py  group_service.py  transaction_service.py  user_service.py  wallet_service.py  webhook_service.py
src/utils/: logger_setter.py
src/utils/files/: state_files_handler.py
tests/: conftest.py
tests/service_tests/: conftest.py  test_transactions.py  test_user.py  test_wallet.py
tests/unit_tests/: test_wallets.py  test_webhooks.py
(+6 files in other folders)
